--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    /* background: seagreen; */
+    background: seagreen;
     background: url(/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
