--- a/style/style.css
+++ b/style/style.css
@@ -8,10 +8,9 @@
 }
 
 body {
-    background: seagreen;
-    background: url(/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background: url(/background.jpg); */
+    /* background-size: cover;
+    background-repeat: no-repeat; */
     
 }
 
@@ -20,8 +19,9 @@ body {
     top: 0;
     left: 0;
     width: 260px;
+    background-color: rgb(255, 85, 0);
     height: 100%;
-    /* background: purple; */
+    padding: 6px 14px;
 }
 
 .sidebar .logo-menu {
@@ -50,6 +50,7 @@ body {
     cursor: pointer;
 }
 
+
 .sidebar .list {
     margin-top: 10px;
 }
@@ -59,16 +60,26 @@ body {
     width: 100%;
     height: 50px;
     margin: 5px 0;
+   
     line-height: 50px;
 }
 
+.list .list-item.active a {
+    background: rgba(255, 255, 255, .2);
+}
+
+.list .list-item.active a:hover{
+    background: rgba(255, 255, 255, .2);
+} 
+
 .list .list-item a {
     display: flex;
+    align-items: center;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
     border-radius:10px ;
-    background-color: blue;
+   
 }
 
 .list .list-item a i {
